# semantica-poc

./: .dockerignore  .env.example  .gitignore  BUNDLE_CHECKLIST.md  CLAUDE.md  Dockerfile.api  Dockerfile.dashboard  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TIMELINE.md  LICENSE  README.md  SEMANTICA_HANDOFF_README.md  Semantica_POC_Conceptual_Framework.md  api_endpoints_regression_report.txt  classifier_regression_report.txt  cypher_warning_regression_report.txt  docker-compose.yml  graphrag_chat_v4_regression_report.txt  launch.sh  pyproject.toml  quick_query_live_report_after.json  quick_query_live_report_before.json  recent_changes.patch  recent_commits.patch  requirements-dev.txt  requirements-v2.txt
.claude/: CLAUDE.md
ai_docs/: MARIS_STRATEGIC_OVERVIEW.md
config/: .env.example  config.yaml
data/: document_manifest.json  fetch_quality_report.tsv  fetch_report.json
docs/: api_reference.md  developer_guide.md  intelligence_upgrade.md  investment_grade_definition.md  second_site_characterization_plan.md  semantica_handoff_readme.md  user_guide.md
examples/: aldabra_case_study.json  belize_barrier_reef_case_study.json  cabo_pulmo_case_study.json  cispata_bay_case_study.json  galapagos_case_study.json  ningaloo_case_study.json  raja_ampat_case_study.json  sample_queries.md  shark_bay_case_study.json  sundarbans_case_study.json
investor_demo/: README.md  api_client.py  demo_narrative.md  demo_narrative_v2.md  demo_narrative_v3.md  precomputed_responses.json  precomputed_responses_v4.json  requirements.txt  streamlit_app.py  streamlit_app_v2.py  streamlit_app_v3.py  streamlit_app_v4.py  streamlit_app_v4.py.bak
maris/: __init__.py  bridge_axiom_engine.py  cli.py  config.py  config_v4.py  data.py  data_loader.py  document_processor.py  entity_extractor.py  export.py  extraction.py  graph.py  graph_builder.py  provenance.py  query.py  query_engine.py  reasoning.py  relationship_extractor.py  schemas.py  semantica.py  semantica_integration.py  settings.py  utils.py  validation.py  validators.py
schemas/: bridge_axiom_templates.json  entity_schema.json  registry_schema.json  relationship_schema.json
scripts/: __init__.py  add_papers_batch.py  add_papers_batch2.py  add_papers_batch3.py  characterize_site.py  demo_healthcheck.py  discover_axioms.py  enrich_abstracts.py  enrich_obis.py  fetch_documents.py  fetch_pdfs_batch.py  generate_scenario_audit_bundle.py  normalize_pdf_filenames.py  populate_neo4j.py  populate_neo4j_v4.py  purge_registry_assets.py  regenerate_export_bundle.py  registry_filters.py  reload_all_sites.py  run_ingestion.py  run_manifest.py  search_literature.py  validate_exports.py  validate_graph.py  validate_pdf_cache.py  validate_registry.py
tests/: __init__.py  conftest.py  test_api_clients.py  test_api_endpoints.py  test_auth.py  test_axiom_discovery.py  test_biodiversity_metrics.py  test_bridge_axiom_provenance.py  test_bridge_axioms.py  test_cabo_pulmo_validation.py  test_characterizer.py  test_classifier.py  test_concept_nodes.py  test_confidence.py  test_cypher_templates.py  test_disclosure.py  test_doi_verifier.py  test_enrich_obis.py  test_entity_extraction.py  test_environmental_baselines.py  test_graphrag_chat_v4.py  test_integration.py  test_llm_discovery.py  test_monte_carlo.py  test_observation_quality.py  test_population.py  (+10 more)
(+167 files in other folders)
