[project]
name = "semantica-poc"
version = "0.1.0"
description = "MARIS x Semantica POC - Marine Asset Risk Intelligence System"
readme = "SEMANTICA_HANDOFF_README.md"
requires-python = ">=3.10"
# NOTE: requirements-v2.txt is the primary dependency file with pinned versions.
# This section is kept for compatibility with pip/uv editable installs.
dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "pypdf>=4.2.0",
    "semantica>=0.2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",
    "ruff>=0.8",
    "pytest-cov>=4.0",
]

[project.scripts]
fetch-documents = "scripts.fetch_documents:fetch_documents"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scripts"]
include-package-data = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: Integration tests requiring real Semantica SDK and/or external services",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",
    "ruff>=0.8",
    "pytest-cov>=4.0",
]
